# rust_webserver

./: Cargo.toml
html/: index.html  notfound.html
resources/: index.html
src/: cache.rs  connection_handler.rs  dir_accessor.rs  handle_request.rs  main.rs  socket_listener.rs
src/cache/: cache_impl.rs  mod.rs
src/html_getters/: cache_accessor.rs  dir_accessor.rs  error.rs  mod.rs  web_content.rs
src/method_handlers/: connect_handler.rs  delete_handler.rs  get_handler.rs  head_handler.rs  mod.rs  options_handler.rs  post_handler.rs  put_handler.rs  trace_handler.rs
src/method_handlers/handler_utils/: error.rs  handler_utils.rs  handler_utils_temp.rs  header_evals.rs  mod.rs  packet_templates.rs
src/method_handlers/response_gen/: get_resp.rs  head_get_resp.rs  mod.rs
src/request_handler/: conditional_get_handler.rs  connect_handler.rs  connection_handler.rs  delete_handler.rs  get_handler.rs  handler_utils.rs  head_handler.rs  mod.rs  options_handler.rs  partial_get_handler.rs  server_error_handler.rs  trace_handler.rs
src/request_handler/get_handlers/: get_handler.rs  last_modified_handler.rs  match_handler.rs  mod.rs
src/resource_getters/: dir_accessor.rs  mod.rs  web_content.rs
