[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"]}
hyper = { version = "1.3.1", features = ["full"]}
http-body-util = "0.1.1"
hyper-util = { version = "0.1.5", features = ["full"]}
chrono = "0.4.38"
sysinfo = "0.30.12"
log = "0.4.21"