[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"]}
hyper = { version = "1.3.1", features = ["full"]}
http-body-util = { version = "0.1.2"}
hyper-util = { version = "0.1.5", features = ["full"]}
chrono = { version = "0.4.38", features = ["default"]}
sysinfo = { version = "0.31.4", features = ["default"]}
notify = {version = "6.1.1", features = ["default"] }